--- a/wasipage.html
+++ b/wasipage.html
@@ -77,9 +77,9 @@
 <body>
 
   <button onclick="window.open(`/wasiqr`)" class="btn">QR Code</button>
-  <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
-  <button onclick="window.open(`https://github.com/Yassin994/YESSER-MD`)" class="btn">Bot Repo</button>
-  <button onclick="window.open(`https://t.me/deecee_x`)" class="btn">Contact Me</button>
+  <button onclick="window.open(`/pair)" class="btn">Pair Code</button>
+  <button onclick="window.open(`https://github.com/yessertech/zombied`)" class="btn">Bot Repo</button>
+  <button onclick="window.open(`https://wa.me/255621995482`)" class="btn">Contact Me</button>
   <button onclick="window.open(`https://whatsapp.com/channel/0029VakA1mu35fM18opH1s30`)" class="btn">Wa Channel</button>
   <button onclick="window.open(`https://www.youtube.com/@Yesserboy92`)" class="btn">Youtube</button>
   
