--- a/pair.html
+++ b/pair.html
@@ -172,7 +172,7 @@
       <div class="box" id="box">
         <div id="text">
           <i class="fa fa-user"></i> <p>
-            <h3 class="centered-text">  <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Black+Ops+One&size=50&pause=1000&color=1BAFBAFF&center=true&width=910&height=100&lines=wlcome in+yesser-tech;pair+site+for+WhatsApp;MD+RELEASED+21.9.2024" alt="Typing SVG" /></a></p>   </h3>
+            <h3 class="centered-text">  <a> 🇹🇿 welcome in yesser general pair code</a></a></p>   </h3>
             <br>
             <h6>ROLE by YESSER TECH</h6>
             <h6>Enter Your Number with Country Code.</h6>
